# ChACRA

./: .gitmodules  README.md  benchmark_hremd.py  environment.yaml  install.sh  pyproject.toml
chacra/: ContactFrequencies.py  average.py  cli.py  convergence.py  plot.py  utils.py  windowed_frequencies.py
chacra/contact_analysis/: getcontacts_scripts.py
chacra/scripts/: benchmark_hremd.py  check_convergence.py  process_hremd_output.py  run_femto_hremd.py  run_hremd.py  windowed_freqs.py
chacra/trajectories/: plf.py
chacra/visualize/: pymol.py
conda/: conda-lock.cuda12.yml  conda-lock.cuda13.yml  environment.yaml  explicit-cuda13.txt
tests/: conftest.py  test_contact_frequencies.py  test_utils.py
tools/: generate_locks.sh  lock_to_explicit.py
